--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -23,12 +23,18 @@ a:hover {
   color: #535bf2;
 }
 
+html{
+  margin: 0;
+  padding: 0; 
+}
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: rgb(208, 208, 208);
 }
 
 h1 {
@@ -67,3 +73,28 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+#root{
+  padding: 0;
+ 
+}
+.card {
+  background-color: white;
+  border-radius: 10px;
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.inputGroup{
+  display: flex;
+  flex-direction: column;
+}
+
+.inputGroup > label{
+ text-align: left;
+}
+
