--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -89,6 +89,20 @@ button:focus-visible {
   justify-content: space-between;
 }
 
+
+#resume {
+  background-color: white;
+  border-radius: 10px;
+  width: 800px;
+  height: 850px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
 .inputGroup{
   display: flex;
   flex-direction: column;
@@ -98,3 +112,7 @@ button:focus-visible {
  text-align: left;
 }
 
+#wrapper {
+  display: flex;
+  flex-direction: row;
+}
