--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -52,9 +52,10 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  border-color: #141414;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #91c8ea;
 }
 button:focus,
 button:focus-visible {
