--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -45,7 +45,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.1em 0.4em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -53,6 +53,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   border-color: #141414;
+  margin-top: 1rem;
 }
 button:hover {
   border-color: #91c8ea;
@@ -83,7 +84,7 @@ button:focus-visible {
   background-color: white;
   border-radius: 10px;
   width: 100%;
-  padding: 2rem;
+  padding: 0.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
