--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -92,19 +92,44 @@ button:focus-visible {
 }
 
 
-#resume {
-  background-color: white;
-  border-radius: 10px;
+#resumeContainer {
   width: 800px;
-  height: 885px;
-  padding: 2rem;
+  height: 945px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 
+#resumeHeader {
+  width: 865px;
+  height: 185px;
+  display: flex;
+  flex-direction: column;
+  background-color: #DBE4EE;
+  word-wrap: break-word
+}
 
+#resumeBody {
+  background-color: white;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  width: 800px;
+  height: 855px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+
+.resumeSection {
+  text-align: left;
+  overflow-wrap: break-word;
+
+}
 .inputGroup{
   display: flex;
   flex-direction: column;
